// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolve > EsBuild: basic 1`] = `
"(() => {
  // tests/fixtures/mod/a.ts
  var a = "a";

  // tests/fixtures/mod/b.ts
  var foo = "bar";
})();
"
`;

exports[`resolve > EsBuild: exclude-self 1`] = `
"(() => {
  // tests/fixtures/mod/a.ts
  var a = "a";

  // tests/fixtures/mod/b.ts
  var foo = "bar";
})();
"
`;

exports[`resolve > EsBuild: import-all 1`] = `
"(() => {
  // tests/fixtures/mod/a.ts
  var a = "a";

  // tests/fixtures/mod/b.ts
  var foo = "bar";

  // tests/fixtures/import-all.ts
  console.log(a);
  console.log(foo);
})();
"
`;

exports[`resolve > EsBuild: ts 1`] = `
"(() => {
  // tests/fixtures/mod/a.ts
  var a = "a";

  // tests/fixtures/mod/b.ts
  var foo = "bar";
})();
"
`;

exports[`resolve > Rollup: basic 1`] = `
"const a = "a";

const foo = "bar";

"use strict";

export { a, foo };
"
`;

exports[`resolve > Rollup: exclude-self 1`] = `
"const a = "a";

const foo = "bar";

export { a, foo };
"
`;

exports[`resolve > Rollup: import-all 1`] = `
"const a = "a";

const foo = "bar";

console.log(a);
console.log(foo);

export { a, foo };
"
`;

exports[`resolve > Rollup: ts 1`] = `
"const a = "a";

const foo = "bar";

export { a, foo };
"
`;
